--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
           </div>
 
           <div class="character-pic-container">
-              <img src="characters/billy.jpg" alt="Billy Loomis" class="character-img">
+              <img src="characters/billy.png" alt="Billy Loomis" class="character-img">
           </div>
 
         </div>
@@ -238,7 +238,7 @@
 
           <div class="side-character-pic-container">
             <!-- <img src="characters/casey.jpg" alt="Dewey" class="side-character-img"> -->
-            <img src="characters/dewey.jpg" alt="Dewey" class="side-character-img">
+            <img src="characters/dewey.png" alt="Dewey" class="side-character-img">
               <img src="characters/gale.jpg" alt="Gale" class="side-character-img">
           </div>
         </div>
