--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
               <p class="director"><strong class="director">Genres:</strong></p>
               <ul class="genre">
-                <ul>
+                <ul style="padding-left: 30px;">
                     <li class="genre">Horror</li>
                     <li class="genre">Slasher</li>
                     <li class="genre">Action</li>
